# castle_game

./: .gitignore  CMakeLists.txt  README.md  README.txt
castle/: CMakeLists.txt  direction.cpp  entityclass.cpp  entityclass.h  filesystem.cpp  filesystem.h  font.cpp  gamemap.cpp  gamereactor.h  gm1.h  gm1reader.cpp  gm1reader.h  graphicsmanager.cpp  macrosota.h  main.cpp  playback.h  renderer.cpp  screen.h  screenmanager.h  sdl_init.h  surface.cpp  textbox.h  textedit.h  textrenderer.cpp  textrenderer.h  tgx.cpp  widget.h
castle/gm/: preloads.txt
core/: CMakeLists.txt  alignment.h  color.cpp  color.h  direction.cpp  direction.h  endianness.h  image.cpp  image.h  imageblur.cpp  imageblur.h  imageclipper.cpp  imageclipper.h  imagedebug.cpp  imagedebug.h  imagelocker.cpp  imagelocker.h  imageopacitysetter.cpp  imageopacitysetter.h  imagetransform.cpp  imagetransform.h  imageview.cpp  imageview.h  interval.cpp  interval.h  iohelpers.h  line.h  modulo.h  palette.cpp  palette.h  point.cpp  point.h  rect.cpp  rect.h  rw.cpp  rw.h  sdl_error.h  sdl_init.h  size.h
game/: CMakeLists.txt  Readme.txt  alignment.h  animation.h  atlas.cpp  atlas.h  bodyanimation.cpp  bodyanimation.h  button.cpp  button.h  camera.cpp  camera.h  cameramode.h  cellrendererpipeline.h  clamp.h  collection.cpp  collection.h  collections.cpp  collections.h  color.cpp  color.h  component.h  console.cpp  console.h  creature.cpp  creature.h  creatureclass.cpp  creatureclass.h  creaturerenderer.cpp  creaturerenderer.h  creaturestate.cpp  creaturestate.h  debugconsole.cpp  debugconsole.h  direction.cpp  direction.h  endianness.h  engine.cpp  engine.h  entity.cpp  (+173 more)
gfxtool/: CMakeLists.txt  main.cpp  main.h
gm1/: CMakeLists.txt  gm1.cpp  gm1.h  gm1entryreader.cpp  gm1entryreader.h  gm1reader.cpp  gm1reader.h  gm1writer.cpp  gm1writer.h
gmtool/: CMakeLists.txt  colorvalidator.cpp  colorvalidator.h  config_gmtool.h.in  dumpmode.cpp  dumpmode.h  engine.cpp  engine.h  entrymode.cpp  entrymode.h  headermode.cpp  headermode.h  hexcolor.cpp  hexcolor.h  imagewriter.cpp  imagewriter.h  listmode.cpp  listmode.h  main.cpp  main.h  mode.h  modehandler.h  modeoptions.cpp  modes.cpp  modes.h  packmode.cpp  packmode.h  palette  palettemode.cpp  palettemode.h  path_validator.h  renderer.cpp  renderer.h  rendermode.cpp  rendermode.h  rw.cpp  rw.h  strutils.h  table.cpp  table.h  (+11 more)
gmtool/imagewriters/: bitmapwriter.cpp  bitmapwriter.h  pngimagewriter.cpp  pngimagewriter.h  tgximagewriter.cpp  tgximagewriter.h
gmtool/renderers/: bitmap.cpp  bitmap.h  pngrenderer.cpp  pngrenderer.h  tgxrenderer.cpp  tgxrenderer.h
shaders/: CMakeLists.txt  animationsheet.cpp  animationsheet.h  glerror.cpp  glerror.h  main.cpp  main.h  misc.h  palettesheet.cpp  palettesheet.h  rgb.frag  rgb.vert  rgb8.frag  rgb8.geom  rgb8.vert  shaderprogram.cpp  shaderprogram.h
src/: .gitignore  AppMain.cpp  AppMain.h  CMakeLists.txt  Exceptions.cpp  Exceptions.h  GM1.h  Makefile  SDLContext.cpp  SDLContext.h  SDLRect.cpp  SDLRect.h  SDLRenderer.cpp  SDLRenderer.h  SDLSurface.cpp  SDLSurface.h  SDLWindow.cpp  SDLWindow.h  TGX.cpp  TGX.h  animation.cpp  animation.h  atlas.cpp  atlas.h  button.cpp  button.h  collection.cpp  collection.h  debugconsole.cpp  debugconsole.h  direction.cpp  direction.h  engine.cpp  engine.h  entityclass.h  errors.h  events.h  filesystem.cpp  filesystem.h  font.cpp  (+72 more)
src/gm/: fonts.txt
tgx/: CMakeLists.txt  tgx.cpp
tools/gm1explorer/: CMakeLists.txt  Makefile  main.cpp  main.h
tools/rects/: Makefile  main.cpp
tools/surfaces/: Makefile  main.cpp
tools/tgxdecoder/: main.cpp
