include_directories (${CMAKE_CURRENT_SOURCE_DIR})

set (TARGET ${GAMEBIN})

set (SUBSYSTEMS
  ${CMAKE_CURRENT_SOURCE_DIR}
)

set(SOURCES "")

foreach (DIR ${SUBSYSTEMS})
  include_directories (${DIR})
  file (GLOB SUBSYSTEM_SOURCES ${DIR}/*.cpp)
  set (SOURCES ${SOURCES} ${SUBSYSTEM_SOURCES})
endforeach(DIR)

add_executable (${TARGET} ${SOURCES})

# message(STATUS "SDL2_LIBRARY=${SDL2_LIBRARY}")
# message(STATUS "SDL2_TTF_LIBRARIES=${SDL2_TTF_LIBRARIES}")
# message(STATUS "SDL2_GFX_LIBRARIES=${SDL2_GFX_LIBRARIES}")

target_link_libraries (${TARGET} ${BOOST_LIBRARIES} ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARIES} ${SDL2_GFX_LIBRARIES} ${GM1LIB} ${TGXLIB} ${CORELIB})